Report, sensors and reference

--- a/report/references.tex
+++ b/report/references.tex
@@ -11,9 +11,17 @@
   KiCad open source electronics design,
   \url{kicad-pcb.org/}
 \bibitem{cad}
-	MISSING reference to cad software used to develop casing
+  \url{https://www.autodesk.com/products/fusion-360/overview}
 \bibitem{x-cube-ble1}
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
+
+\bibitem{micro-epsilon-mk30}
+ \url{https://www.micro-epsilon.se/displacement-position-sensors/draw-wire-sensor/MK_Serie/}
+\bibitem{micro_lidar}
+ \url{https://www.adafruit.com/product/3317}
+\bibitem{load_cell}
+ \url{http://www.te.com/commerce/DocumentDelivery/DDEController?Action=srchrtrv&DocNm=FX19&DocType=DS&DocLang=English}
+
 \bibitem{x-cube-mems1}
   \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
 \bibitem{bluenrg-app}
