Report stuff again

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -27,13 +27,8 @@
 	\label{fig:schr3c}
 \end{figure}
 
-%INSERT Image of circuit board(s)
-\begin{figure}[tbh]
-	\centering
-    \includegraphics[width=\linewidth]{Figures/pcb_rev3.jpg}
-	\caption{third (3) revision circuit board}
-	\label{fig:pcbr3}
-\end{figure}
+%Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
+
 
 %INSERT Image of Battery circuit
 
