--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -133,6 +133,14 @@ first={Universal Synchronous Asynchronous Receiver-Transmitter (USART)\glsadd{us
 description={Universal Serial Bus}, 
 first={Universal Serial Bus (USB)\glsadd{usbg}}, see=[Glossary:]{usbg}}
 
+%%% Bluetooth
+\newglossaryentry{btg}{name={BT},
+    description={Bluetooth (BT), is a wireless short-range half-duplex 
+	communication standard used mostly in mobile devices}}
+\newglossaryentry{bt}{type=\acronymtype, name={BT}, 
+description={Bluetooth}, 
+first={Bluetooth (BT)\glsadd{btg}}, see=[Glossary:]{btg}}
+
 %%% LED
 \newglossaryentry{ledg}{name={LED},
     description={A Light-emitting diode (LED), is a two-lead semiconductor light source}}
