--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -59,6 +59,14 @@ first={Printed Circuit Board (PCB)\glsadd{pcbg}}, see=[Glossary:]{pcbg}}
 description={Swedish Krona}, 
 first={Swedish Krona (SEK)\glsadd{sekg}}, see=[Glossary:]{sekg}}
 
+%%% SWD
+\newglossaryentry{swdg}{name={SWD},
+    description={Serial Wire Debug (SWD) is an alternative 2-pin electrical interface,
+	standard debugging protocol used in ARM processors}}
+\newglossaryentry{swd}{type=\acronymtype, name={SWD},
+description={Serial Wire Debug}, 
+first={Serial Wire Debug (SWD)\glsadd{swdg}}, see=[Glossary:]{swdg}}
+
 %%% LIDAR
 \newglossaryentry{lidarg}{name={LIDAR},
     description={Light Detection and Ranging (LIDAR)}}
