--- a/report/references.tex
+++ b/report/references.tex
@@ -3,7 +3,9 @@
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
 % Reference to casing cad software missing
+\bibitem{cad}
 % Reference to software used to develop battery circuit missing
+\bibitem{onlineCad}
 
 \bibitem{stm32cubemx}
   \url{http://www.st.com/en/development-tools/stm32cubemx.html}
