--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -1,9 +1,6 @@
 This chapter will summarize most of the process of creating the \gls{pcb} used to mount all the sensors and sending the data to the phone application. This circuit board will be the link between the physical forces and manipulated data sent to the handheld device. More on how this data is manipulated and how the circuit board is programmed in \autoref{sec:sw}. 
 
-\subsection{Main circuitry and requirements}\label{sec:hw:req}
-The main circuit board is built using the open source electronic design software KiCad\cite{kicad}. It is completely free to use and the source code is open for any modifications.
-
-The circuit board must minimally fulfill the following:
+The circuit board must minimally fulfill the following set of basic requirements to function properly:
 \begin{itemize}[noitemsep]
 \item Circuit must fit within the casing, with dimensions extracted directly from the cad software\cite{cad}, see \autoref{fig:casdim}.
 \item Circuit must be easy to test for both hardware and software errors. Even complete system needs this, since many of the sensors are very small and difficult to solder.
@@ -14,6 +11,7 @@ The circuit board must minimally fulfill the following:
 
 \subsection{Method}
 % Methodology
+The main circuit board is built using the open source electronic design software KiCad\cite{kicad}. It is completely free to use and the source code is open for any modifications.
 Designing circuit boards differs slightly between what software you are using. KiCad\cite{kicad} uses a four step process as follows:
 \begin{enumerate}[noitemsep]
 \item Draw schematic:
@@ -65,9 +63,7 @@ Non-standard library entries include following components:\\
 \end{table}
 \end{minipage}
 
-% Thinking
-
-\subsection{Revisions}\label{sec:hw:rev}
+%\subsection{Revisions}\label{sec:hw:rev}
 In total three revisions of the \gls{pcb} was designed. The first revision was designed well before any components arrived and was meant exclusively as a prototype, while both the second and third revisions were supposed to have full functionality. All revisions following the first were initially supposed to be designed as consecutive debugged states, but complete redesigns of component placings and tracing was eventually necessary.
 
 \subsubsection{First revision}
@@ -83,7 +79,7 @@ First revision included the main functionality and test points on basically ever
 The second revision fixed all known problems, followed the space requirements and added a lot of customization. The option to toggle power source and what \gls{imu}s were currently powered were added. This way the effect from individual modules could be measured. Also since it was still unclear if a combined chip for all \gls{imu}s would be added or not, space for all of them and an evaluation module was added. However, some wires was lost in the transition from revision one to two, as all net-labels in the schematic was redrawn; also the micro-\gls{usb} housing was to small for continuous use and was ripped of by our, way to strong, programmers; all of this was hot fixed and eventually the circuit board worked as expected. As with revision one, the schematic of revision two has not been included in this report, as there is little to learn from it; the \gls{pcb} can however be seen as \autoref{fig:pcbr2}.
 \begin{figure}[tbh]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/pcb_rev2.jpg}
+	\includegraphics[width=\linewidth]{Figures/pcb_rev2.jpg}
 	\caption{Second (2) revision circuit board}
 	\label{fig:pcbr2}
 \end{figure}
@@ -92,7 +88,7 @@ The second revision fixed all known problems, followed the space requirements an
 With almost all problems solved in the second revision, what remained was some hotfix for an unexpected wiring error in the \gls{gps}; interference between \gls{i2c} clock and data line; minimizing much to large decoupling ground loops; unwanted antennas; ground islands of missing copper and a KiCad problem where disconnected \gls{via}s lose their net property. The option to pull power from either \gls{usb} or batteries remained in the last revision, as this makes programming and testing much easier. A four pin connector to measure the battery level through \gls{i2c} was added, and since the power level of this depends slightly on the power left in the batteries a logic level converter was designed to allow for a variable voltage level, see \autoref{fig:schr3b}.
 For the third revision all decisions have been made and the schematic can be seen as \autoref{fig:schr3a}, \ref{fig:schr3b} and \ref{fig:schr3c}.
 
-Following communicative devices will used and act as ``mudule areas'', i.e. these units will be the central units of the \gls{pcb} layout.
+Following communicative devices will used and act as ``mudule areas'', i.e. these units will be the central units of the \gls{pcb} layout. This was introduced in the second
 \begin{itemize}[noitemsep]
 \item{\makebox[3cm][l]{STM32F411RET} - Microcontoller unit}
 \item{\makebox[3cm][l]{FT232RL} - \gls{usb}to serial converter (USART)}
@@ -113,7 +109,7 @@ Following communicative devices will used and act as ``mudule areas'', i.e. thes
 \item INA128 \qquad- Analog load cell amplifiers (ADC)
 \item MCDTS2-4N \qquad- Tactile push buttons (Pull-up/Pull-down)
 \end{itemize}
-The layout of the components are such that all \gls{i2c} communicative devices are moved to one spot ensuring the shortest possible \gls{i2c} data line. Ground \gls{via}s was added around communication traces to prevent unwanted interference, ground \gls{via}s were also added to prevent antennas\footnote{Antennas appear from letting an isolated thin ground be connected in only one end, a \gls{via} can therefore be added to the other end to prevent this from happening.}. The power is placed in the bottom right, since this is as far as possible from everything else. \gls{usb} is placed next to the power, as power can be opted to be drawn from \gls{usb} rather than battery. Analog plane with the load cells are put right next to the power to ensure the star-ground\footnote{A common node ground connecting all grounds together to ensure the same set working level} to be as close as possible to the power-source allowing for as little noise as possible. \gls{bt} communication devices are rather fragile, it is therefore placed as far as possible from everything in the top left corner of the \gls{pcb}. This \gls{bt} module (SPBTLE-RF) requires \gls{spi} communication and in total $6$ isolated traces are to be drawn between the \gls{mcu} and the \gls{bt} unit. To minimize crossover the \gls{gps} is placed in the top-mid of the \gls{pcb}. Lastly the buttons whose placing is of low importance are placed in the middle-left, between the power source and the \gls{bt} unit. The third, and last, revision of the \gls{pcb} can be seen in \autoref{fig:pcbr3}, a simple explanation of the layout can be seen in \autoref{fig:pcbr3simple}.
+The layout of the components are such that all \gls{i2c} communicative devices are moved to one spot ensuring the shortest possible \gls{i2c} data line. Ground \gls{via}s was added around communication traces to prevent unwanted interference, ground \gls{via}s were also added to prevent antennas\footnote{Antennas appear by letting isolated thin grounds be connected on only one end, a \gls{via} can therefore be added to the other end to prevent this from happening.}. The power is placed in the bottom right, since this is as far as possible from everything else. \gls{usb} is placed next to the power, as power can be opted to be drawn from \gls{usb} rather than battery. Analog plane with the load cells are put right next to the power to ensure the star-ground\footnote{A common node ground connecting all grounds together to ensure the same set working level} to be as close as possible to the power-source allowing for as little noise as possible. \gls{bt} communication devices are rather fragile, it is therefore placed as far as possible from everything in the top left corner of the \gls{pcb}. This \gls{bt} module (SPBTLE-RF) requires \gls{spi} communication and in total $6$ isolated traces are to be drawn between the \gls{mcu} and the \gls{bt} unit. To minimize crossover the \gls{gps} is placed in the top-mid of the \gls{pcb}. Lastly the buttons whose placing is of low importance are placed in the middle-left, between the power source and the \gls{bt} unit. The third, and last, revision of the \gls{pcb} can be seen in \autoref{fig:pcbr3}, a simple explanation of the layout can be seen in \autoref{fig:pcbr3simple}.
 \begin{figure}[tb]
 	\centering
     \includegraphics[width=\linewidth]{Figures/pcb_rev3.jpg}
@@ -123,12 +119,13 @@ The layout of the components are such that all \gls{i2c} communicative devices a
 \begin{figure}[tb]
 	\centering
     \includegraphics[width=.75\linewidth]{Figures/pcb_rev3_simple.png}
-	\caption{Simple modle of third (3) revision circuit board areas}
+	\caption{Simple model of third (3) revision circuit board areas}
 	\label{fig:pcbr3simple}
 \end{figure}
 
-\subsection{choices (TiP)}\label{sec:hw:tip1}
-stuff3
+\subsection{Component choices}\label{sec:hw:tip1}
+\chapterauthor{Eriksson, Kenny (Brolin, Daniel)}
+\input{tmp_hw_choice_of_components_kenny.tex}
 
 \subsection{results (TiP)}\label{sec:hw:tip2}
 stuff4
