--- a/report/main.tex
+++ b/report/main.tex
@@ -116,6 +116,11 @@
 \input{hw_design.tex}
 
 \clearpage
+\section{Casing}\label{sec:case}
+\chapterauthor{Lundberg, Josef ( , )}
+\input{casing.tex}
+
+\clearpage
 \section{Battery charging circuitry}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
 \input{charging_design.tex}
