--- a/report/casing.tex
+++ b/report/casing.tex
@@ -1,9 +1,6 @@
 
-\section{Casing}
 This system has some different types of components and sensors, which all need to be housed in a watertight casing for security and robustness. Some design ideas for this part was to make it easy to mount, small physical footprint, all the electronics in the same enclosure and watertight.  
-
 The case will be revised and worked on over the whole length of the course, redefining and remodeling the construction over time.  
-
 The cases are constructed with the use of the program Fusion 360, which is a free to use CAD software. They are then produced by using a 3D printer, which is a fast and easy way of try out different ideas and models.   
 
 %% Första versionen -------------------------
@@ -11,7 +8,6 @@ The cases are constructed with the use of the program Fusion 360, which is a fre
 First, a suitable solution was needed, with no thoughts about physical limitations, strength, material or manufacturability.  
 
 The idea was modeled around the original mounting plate which is already fastened to the boat, which has the function to hold the board in place and make the daggerboard stable in the boat. The model had the same dimension as the original plate, only the height was different to accommodate the size of the pressure sensors. By making a mounting plate with the same width and length of the original mounting plate the implementation would be neat and space saving. 
-
 This one had some problems, one of them is that the case is too big for any of the 3D-printers that we had access to. Another problem with this instance of the model was that for the circuit boards to fit inside they had to be very small and have some odd shapes.  
 
 % Kolla på mina bilder
@@ -19,9 +15,9 @@ This one had some problems, one of them is that the case is too big for any of t
 
 \begin{figure}[H]
 \begin{center}
-	\includegraphics[width = 10cm]{Figures/Press_sens_func_1.png}
-	\caption{Function of first prototype}
-	\label{Press_sens_prot_1}
+	\includegraphics[width = 10cm]{Figures/Case_rev_1.png}
+	\caption{First revision of the case}
+	\label{Case_rev_1}
 \end{center}
 \end{figure}
 
@@ -32,9 +28,9 @@ The next revision was like the first one, it had the same shape and idea as the 
 % Kolla på mina bilder
 \begin{figure}[H]
 \begin{center}
-	\includegraphics[width = 10cm]{Figures/Press_sens_func_1.png}
-	\caption{Function of first prototype}
-	\label{Press_sens_prot_1}
+	\includegraphics[width = 10cm]{Figures/Case_rev_2.png}
+	\caption{Second revision of the case}
+	\label{Case_rev_2}
 \end{center}
 \end{figure}
 
@@ -54,15 +50,15 @@ When building the third version on the 3D-printer the problems with the model co
 
 \begin{figure}[H]
 \begin{center}
-	\includegraphics[width = 10cm]{Figures/Press_sens_func_1.png}
-	\caption{Function of first prototype}
-	\label{Press_sens_prot_1}
+	\includegraphics[width = 10cm]{Figures/Case_rev_3.png}
+	\caption{Third revision of the case}
+	\label{Case_rev_2}
 \end{center}
 \end{figure}
 
 \subsection{Fourth revision}
 
-The fourth revision has all the features and can hold all the electronics. It's been designed to hold the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the PCBs in the same enclosure. The access panel has been placed at the underside of the model to get a better water seal. The access panel is a big plate covering the most part of the underside of the model. To ensure it's watertight there is a seal between the panel and the casing itself.
+The fourth revision have all the features and can hold all the electronics. It's been designed to house the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the PCBs in the same enclosure. The access panel has been placed at the underside of the model to get a better water seal. The access panel is a big plate covering the most part of the underside of the model. To ensure it's watertight there is a seal between the panel and the casing itself.
 Due to the material cost and time it takes for the 3D printer to produce models the manufactured part has just some thin layers in the bottom part of the print. To get the some strength in the model epoxy resin was mixed and poured in to both get the stability needed and a clear window for the Time of Flight sensor.
 
 \subsection{Results}
@@ -76,8 +72,8 @@ The pressure sensors is not entirely water sealed, some more work is needed in t
 % Kolla på mina bilder
 \begin{figure}[H]
 \begin{center}
-	\includegraphics[width = 10cm]{Figures/Press_sens_func_1.png}
-	\caption{Function of first prototype}
-	\label{Press_sens_prot_1}
+	\includegraphics[width = 10cm]{Figures/Case_rev_4.png}
+	\caption{Final version of the case}
+	\label{Case_rev_4}
 \end{center}
 \end{figure}
