--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -3,7 +3,7 @@ Since all kinds of sailboats main feature is to move completely analogue without
 
 To get any kind of measurements of the dinghy, sensors are needed. As of now there are sensors measuring a wide array of items. This section will talk about these sensors; what they measure, where they were purchased, the requirements on the sensor, their features, drawbacks and also how they were implemented.
 Since the sensors have to work in this particular system prototypes are made around the sensors to acquire the data.
-Designs are made with the \gls{CAD} software Fusion 360\cite{cad}. The models are manufactured using a 3D printer for fast and easy development.
+Designs are made with the \gls{cad} software Fusion 360\cite{cad}. The models are manufactured using a 3D printer for fast and easy development.
 
 \subsection{Force sensors}
 The function of the daggerboard is to compensate for the force that the wind is pushing on the sail which also helps to hold the dingy level in the water. The goal is to have a system that can measure the forces that pushes on the daggerboard by the water it goes through. By measuring the side forces on the board, a rough estimation of the exerted force on the sail can be made. 
@@ -69,7 +69,7 @@ From the datasheet, the voltage readings of this part could be calculated. The m
 
 \subsection{Amplifier}
 With a such small signal, an amplifier is needed to get some desired measurements. A good measurement signal to the MCU should be in the order of in between$0–3.3$ volts. Since the maximum value from the load cell is 180mV an signal of 3.3 volts is achieved by an amplification gain of around $20$.  
-
+0
 A suitable amplifier needs to be chosen from this implementation. Inspiration is taken from The University of Chicago\ref{UoC} in an experiment where they use this exact load cell together with an instrumental amplifier called INA125. This amplifier is somewhat more complicated and has some more features that other amplifiers.  
 
 In the same family of instrument amplifiers, a model called INA126 is selected as a less complicated and more power efficient solution.  
@@ -113,7 +113,7 @@ One of the best implementations of a height sensor would be the use of a linear 
 \end{center}
 \end{figure}
 
-Light sensors have also been considered. This is implemented with the use of a plate placed on top of the dagger-board and with the light being sent up to this panel, the height can be calculated. First, we looked into some \gls{IR}-sensors. They will send the signal in a widespread which will make the distance measurement troublesome as this signal has just a small plate to bounce off.
+Light sensors have also been considered. This is implemented with the use of a plate placed on top of the dagger-board and with the light being sent up to this panel, the height can be calculated. First, we looked into some \gls{ir}-sensors. They will send the signal in a widespread which will make the distance measurement troublesome as this signal has just a small plate to bounce off.
 
 With the use of a \gls{lidar} system, we can point our light signal at an exact spot and then get an exact measurement of the height.  
 Many of the \gls{lidar} systems found was both too large and expensive to be implemented in this project.
@@ -135,7 +135,7 @@ All the information about this sensor when used with a cover widow can be found 
 
 \begin{figure}[H]
 	\centering %\centering can be used inside environments (i.e. all \begin{} here \end{}) and centers everything inside.
-	\includegraphics[width = 10cm]{Figures/height_mesure.jpg}
+	\includegraphics[width = 10cm]{Figures/height_measure.jpg}
 	\caption{Height measurement model}
 	\label{height_measure}
 \end{figure}
